criação das paginas emprestimo e SejaNossoCliente

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="logo" src="imagens/logo.png" alt="LogoMarca">
+        <a href="index.html" target="_self"><img class="logo" src="imagens/logo.png" alt="LogoMarca"></a>
         <nav class="navCabecalho">
             <button class="efeito" type="button">Para você</button>
             <button class="efeito" type="button">Para empresas</button>
@@ -18,7 +18,8 @@
             <button class="efeito" type="button">Institucional</button>
         </nav>
         <nav class="navCabecalho">
-            <button class="efeito-conta" type="button">acesse sua conta</button>
+            <a href="emprestimo.html" rel="next" target="_self"><button class="efeito-conta" type="button">acesse sua
+                    conta</button></a>
             <a href="">CRIE SUA CONTA</a>
         </nav>
     </header>
@@ -32,8 +33,8 @@
             <nav>
                 <div class="atalho">
                     <h3 id="acesse">Acesse</h3>
-                    <button class="efeito-navegacao" class="botaoInterno" type="button">Empréstimo</button>
-                    <button class="efeito-navegacao" class="botaoInterno" type="button">Seja nosso cliente</button>
+                    <a href="emprestimo.html"><button class="efeito-navegacao" type="button">Empréstimo</button></a>
+                    <a href="sejanossocliente.html" target="_self"><button class="efeito-navegacao" type="button">Seja nosso cliente</button></a>
                 </div>
             </nav>
             <article>
@@ -49,7 +50,7 @@
                                 aliquid
                                 voluptatum laboriosam quibusdam!</p>
                             <div>
-                                <button class="efeito-conteudo" type="button">confira</button>
+                                <a href="emprestimo.html" target="_self"><button class="efeito-conteudo" type="button">confira</button></a>
                             </div>
                         </div>
                     </div>
