Estilizações das páginas Emprestimo e SejaNossoCliente

--- a/emprestimo.html
+++ b/emprestimo.html
@@ -27,25 +27,23 @@
         <header>
             <h1>Empréstimo XYZ</h1>
         </header>
-        <article>
-            <nav>
+        <article class="conteudo-inicial">
+            <nav class="nav-inicial-interno">
                 <a href="index.html" target="_self"><button type="button">Tela Inicial</button></a>
                 <a href="sejanossocliente.html" target="_self"><button type="button">Seja Nosso Cliente</button></a>
             </nav>
-            <div>
+            <div class="conteudo-inicial-interno">
                 <h2>Empréstimo Pessoal</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo numquam adipisci facere, neque, nam
-                    accusamus velit quod saepe dolorem officiis magnam nostrum consequatur. Accusantium eaque pariatur
-                    earum adipisci facilis.</p>
+                <p>O Empréstimo XYZ é uma solução indicada para cumprir metas: reorganizar as finanças, reformar a casa, abrir seu negócio, fazer a viagem dos sonhos e muito mais. Trabalhamos preços diferenciados para cada perfil de cliente e com parcelamento de até 72x. Ah! E você ainda pode pagar a primeira parcela em até 60 dias.</p>
             </div>
-            <div>
+            <div class="conteudo-inicial-interno">
                 <h2>Empréstimo Consignado</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla soluta, dolorum rem quis neque
                     voluptates! Iure cum quidem, in at, aspernatur quia quasi laborum aut porro asperiores voluptatem
                     eveniet nemo!</p>
             </div>
         </article>
-        <article>
+        <article class="conteudo-final">
             <form action="simulacaodeemprestimo" method="post">
                 <label>De quanto você precisa?</label>
                 <input type="text" name="valor_emprestimo">
