--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <button class="efeito" type="button">Institucional</button>
         </nav>
         <nav class="navCabecalho">
-            <a href="emprestimo.html" rel="next" target="_self"><button class="efeito-conta" type="button">acesse sua
-                    conta</button></a>
+            <button class="efeito-conta" type="button">acesse sua
+                conta</button>
             <a href="">CRIE SUA CONTA</a>
         </nav>
     </header>
@@ -34,7 +34,8 @@
                 <div class="atalho">
                     <h3 id="acesse">Acesse</h3>
                     <a href="emprestimo.html"><button class="efeito-navegacao" type="button">Empréstimo</button></a>
-                    <a href="sejanossocliente.html" target="_self"><button class="efeito-navegacao" type="button">Seja nosso cliente</button></a>
+                    <a href="sejanossocliente.html" target="_self"><button class="efeito-navegacao" type="button">Seja
+                            nosso cliente</button></a>
                 </div>
             </nav>
             <article>
@@ -50,7 +51,8 @@
                                 aliquid
                                 voluptatum laboriosam quibusdam!</p>
                             <div>
-                                <a href="emprestimo.html" target="_self"><button class="efeito-conteudo" type="button">confira</button></a>
+                                <a href="emprestimo.html" target="_self"><button class="efeito-conteudo"
+                                        type="button">confira</button></a>
                             </div>
                         </div>
                     </div>
