--- a/sejanossocliente.html
+++ b/sejanossocliente.html
@@ -30,7 +30,7 @@
                 <a href="sejanossocliente.html" target="_self"><button type="button">Seja Nosso Cliente</button></a>
             </nav>
             <div>
-                <img src="" alt="Propaganda">
+                <img src="imagens/depoimento02.png" alt="Propaganda">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloremque atque aut, obcaecati quo omnis.</p>
             </div>
             <form action="cadastrocliente">
