--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section>
         <div class="propaganda">
-            <img class="prop" src="https://static.ndmais.com.br/2023/03/topo.png" alt="propaganda">
+            <img class="prop" src="imagens/propagandaindex.jpeg" alt="propaganda">
         </div>
 
         <div class="principal">
@@ -44,12 +44,8 @@
                         <img class="imagem conteudo" src="imagens/emprestimo.jpg" alt="Empréstimo">
                         <div class="interno cont">
                             <h2>Empréstimo</H2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolore dolorum asperiores
-                                doloribus
-                                eius! Reiciendis cum, veniam blanditiis vitae praesentium rem, expedita, at repellat
-                                ipsa et
-                                aliquid
-                                voluptatum laboriosam quibusdam!</p>
+                            <p>Faça já sua simulação de empréstimo pessoal na hora. Empréstimo fácil, rápido, online sem
+                                sair de casa e com toda segurança.</p>
                             <div>
                                 <a href="emprestimo.html" target="_self"><button class="efeito-conteudo"
                                         type="button">confira</button></a>
@@ -60,10 +56,8 @@
                         <img class="imagem conteudo" src="imagens/financiamento.jpg" alt="">
                         <div class="interno cont">
                             <h2>Financiamento</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolore dolorum asperiores
-                                doloribus eius! Reiciendis cum, veniam blanditiis vitae praesentium rem, expedita, at
-                                repellat
-                                ipsa et aliquid voluptatum laboriosam quibusdam!</p>
+                            <p>São várias opções de financiamento que se encaixam perfeitamente com os seus objetivos.
+                                Veja as possibilidades e escolha:</p>
                             <div>
                                 <button class="efeito-conteudo" type="button">simule agora</button>
                             </div>
@@ -73,10 +67,9 @@
                         <img class="imagem conteudo" src="imagens/antecipacao.jpg" alt="">
                         <div class="interno cont">
                             <h2>Antecipação</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolore dolorum asperiores
-                                doloribus eius! Reiciendis cum, veniam blanditiis vitae praesentium rem, expedita, at
-                                repellat
-                                ipsa et aliquid voluptatum laboriosam quibusdam!</p>
+                            <p>A antecipação de recebíveis é um recurso financeiro que permite às empresas receberem
+                                valores antes do prazo previsto, utilizando-se legalmente de empresas especializadas
+                                neste tipo de operação, ou seja um adiantamento de recebíveis futuros.</p>
                             <div>
                                 <button class="efeito-conteudo" type="button">saiba mais</button>
                             </div>
@@ -105,28 +98,32 @@
                 <h2 id="depoimento">Depoimentos</h2>
                 <div class="depoiments">
                     <img src="imagens/depoimento01.png" alt="Pessoa feliz">
-                    <p class="interno par">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste velit
-                        asperiores
-                        voluptate ullam consequuntur quia placeat modi fugiat neque molestias, vitae esse adipisci
-                        consectetur deserunt vero, sapiente consequatur autem ex?</p>
+                    <p class="interno par">"Eu, <strong>Edilena Pinto Martins</strong> fui muito bem atendida pelas
+                        funcionárias da <strong>XYZ</strong> e principalmente pela Diretora Geral CÍNTIA sempre que
+                        alguém me perguntar sobre qualquer financeira vou indicar a <strong>XYZ</strong> sou muito grata
+                        por todos os funcionários e pela CÍNTIA obrigada por tudo!!!!"</p>
                 </div>
             </div>
             <div>
                 <div class="depoiments">
 
-                    <p class="interno par">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste velit
-                        asperiores
-                        voluptate ullam consequuntur quia placeat modi fugiat neque molestias, vitae esse adipisci
-                        consectetur deserunt vero, sapiente consequatur autem ex?</p>
+                    <p class="interno par2">"Queria comprar um imóvel e com eles encontrei o imóvel desejado. Junto veio
+                        lisura, competência, credibilidade, satisfação, camaradagem, profissionalismo e presteza em
+                        todas as questões afetas a negociação, enfim, recomendo com empenho, pois em tudo que foi
+                        necessário fui atendido a tempo e a hora, excelente equipe que proporcionou uma negociação
+                        tranquila rápida e séria. Parabéns pela dedicação de vocês com os clientes."
+                        <strong>Iran Valentin</strong>
+                    </p>
+
                     <img src="imagens/depoimento02.png" alt="Pessoa feliz">
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        <div>
+        <div id="divFooterLogo">
             <img class="logoFooter" src="imagens/logo.png" alt="LogoMarca">
-            <p>Sempre ao seu lado</p>
+            <p id="pFooter">Sempre ao seu lado</p>
         </div>
         <nav class="navFooter">
             <h2 id="contato">Contatos</h2>
